fix for android dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,8 @@
 
 html {
   scroll-behavior: smooth;
-  color-scheme: dark;
-  color-scheme: only dark;
+  color-scheme: light;
+  color-scheme: only light;
   forced-color-adjust: none;
 }
 
